# nl_processing

./: .gitignore  .jscpd.json  AGENTS.md  Makefile  NEON.md  README.md  pyproject.toml  ruff.toml  vulture_whitelist.py
.github/workflows/: ci.yml  publish.yml
.opencode/agents/: dev.md  project-manager.md  qa-verifier.md  scrum-master.md  task-checker.md
.opencode/skills/scrum-master/: SKILL.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml  codex.yaml  opencode.yaml
_bmad/_memory/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
docs/: ENV_VARS.md  REALEASE_WORKFLOW.md  architecture.md  module-spec.md  prd.md  product-brief.md
docs/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-03-03.md  prd.md  product-brief-extract_text_from_image-2026-03-01.md  product-brief.md
docs/sprints/auto-flush/: SPRINT.md  TASK_01_add_background_flush.md  TASK_02_unit_tests.md  TASK_03_integration_tests.md  TASK_04_e2e_tests.md
docs/sprints/database-and-sampling/: MIGRATION_PLAN.md  SPRINT.md  TASK_01_add_asyncpg_dep.md  TASK_02_db_exceptions_models_logging.md  TASK_03_abstract_backend.md  TASK_04_neon_backend.md  TASK_05_database_service.md  TASK_06_exercise_progress.md  TASK_07_cached_service.md  TASK_08_testing_utilities.md  TASK_09_db_unit_tests.md  TASK_10_db_integration_tests.md  TASK_11_db_e2e_tests.md  TASK_12_sampling_service.md  TASK_13_sampling_unit_tests.md  TASK_14_sampling_integration_tests.md
docs/sprints/database-cache-extraction/: SPRINT.md  TASK_01_remove_cached_service.md  TASK_02_apply_delta_validation.md  TASK_03_apply_delta_atomicity.md  TASK_04_fr21_missing_translation_warning.md  TASK_05_sync_database_docs.md  TASK_06_sync_database_cache_docs.md
docs/sprints/database-cache-impl/: SPRINT.md  TASK_01_add_aiosqlite_dependency.md  TASK_02_exceptions_module.md  TASK_03_models_module.md  TASK_04_logging_module.md  TASK_05_local_store_module.md  TASK_06_sync_module.md  TASK_07_service_module.md  TASK_08_init_module.md  TASK_09_unit_tests.md  TASK_10_integration_tests.md  TASK_11_e2e_tests.md  TASK_12_vulture_whitelist.md  TASK_13_sync_shared_docs.md  TASK_14_sync_module_docs.md
docs/sprints/database-exercise-tables/: MIGRATION_PLAN.md  SPRINT.md  TASK_01_fix_add_words_language_bug.md  TASK_02_sql_queries_per_exercise_tables.md  TASK_03_abstract_backend_new_methods.md  TASK_04_neon_backend_implementation.md  TASK_05_exercise_progress_refactor.md  TASK_06_cache_support_apis.md  TASK_07_mark_cached_service_legacy.md  TASK_08_update_testing_utilities.md  TASK_09_update_unit_tests.md  TASK_10_update_integration_tests.md  TASK_11_update_e2e_tests.md  TASK_12_update_vulture_whitelist.md
docs/sprints/docs-impl-sync/: SPRINT.md  TASK_cleanup_stale_dirs.md  TASK_fix_prd_database_atomicity.md  TASK_trim_arch_database_cache.md  TASK_trim_prd_database.md  TASK_trim_prd_database_cache.md
docs/sprints/module-core/: SPRINT.md  TASK_01.md  TASK_02.md  TASK_03.md  TASK_04.md  TASK_05.md  TASK_06.md  TASK_07.md
docs/sprints/module-database/: SPRINT.md  TASK_01_fix_flaky_test.md  TASK_02_infrastructure.md  TASK_03_exceptions_models_logging.md  TASK_04_abstract_backend.md  TASK_05_neon_backend.md  TASK_06_database_service.md  TASK_07_cached_service.md  TASK_08_testing_utilities.md  TASK_09_unit_tests.md  TASK_10_integration_tests.md  TASK_11_e2e_tests.md  TASK_12_vulture_cleanup.md
docs/sprints/module-extract-text-from-image/: SPRINT.md  TASK_01.md  TASK_02.md  TASK_03.md  TASK_04.md  TASK_05.md  TASK_06.md  TASK_07.md
docs/sprints/module-extract-text-from-image-v2/: SPRINT.md  TASK_01_fix_unittest_mock_ban.md  TASK_02_migrate_prompt_serialization.md  TASK_03_generate_fewshot_prompt.md  TASK_04_verify_module_integration.md  TASK_05_add_multilanguage_integration_tests.md
docs/sprints/module-extract-words-from-text/: SPRINT.md  TASK_e2e_tests.md  TASK_integration_tests.md  TASK_prompt_generation.md  TASK_service_implementation.md  TASK_unit_tests.md  TASK_vulture_cleanup.md
docs/sprints/module-translate-text/: SPRINT.md  TASK_e2e_tests.md  TASK_integration_tests.md  TASK_prompt_generation.md  TASK_service_implementation.md  TASK_unit_tests.md  TASK_vulture_cleanup.md
docs/sprints/module-translate-word/: SPRINT.md  TASK_e2e_tests.md  TASK_integration_tests.md  TASK_prompt_generation.md  TASK_service_implementation.md  TASK_unit_tests.md  TASK_vulture_cleanup.md
docs/sprints/sampling-swappable-store/: SPRINT.md  TASK_01_protocol_and_constructor.md  TASK_02_vulture_whitelist.md
docs/sprints/translate_text_from_image/: SPRINT.md  TASK_1_promote_image_helpers_to_core.md  TASK_2_extend_build_translation_chain.md  TASK_3_package_scaffolding.md  TASK_4_service_and_unit_tests.md  TASK_5_prompt_generation_and_assets.md  TASK_6_integration_tests.md  TASK_7_e2e_tests.md  TASK_8_final_integration.md
docs/sprints/unified-word-model/: SPRINT.md  TASK_01.md  TASK_02.md  TASK_03.md  TASK_04.md  TASK_05.md
nl_processing/: __init__.py  processor.py
nl_processing/core/: exceptions.py  models.py  prompts.py
nl_processing/core/scripts/: prompt_author.py
nl_processing/database/: __init__.py  cached_service.py  exercise_progress.py  logging.py  models.py  service.py  testing.py
nl_processing/database_cache/: _local_store_queries.py  exceptions.py  local_store.py  service.py  sync.py
nl_processing/extract_text_from_image/: __init__.py  benchmark.py  image_encoding.py  service.py
nl_processing/extract_words_from_text/: __init__.py  service.py
nl_processing/sampling/: service.py
nl_processing/translate_text/: __init__.py  service.py
nl_processing/translate_word/: __init__.py  service.py
tests/: conftest.py
tests/e2e/: conftest.py  test_smoke_e2e.py
tests/integration/: test_processor_integration.py
tests/unit/: test_processor_unit.py
(+97 files in other folders)
