[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nl_processing"
version = "0.3.0"
description = "Natural language processing playground"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.0,<3",
  "langchain>=0.3,<1",
  "langchain-openai>=0.3,<1",
  "opencv-python>=4.10,<5",
  "asyncpg>=0.30,<1",
  "aiosqlite>=0.20,<1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nl_processing*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"nl_processing.extract_text_from_image.prompts" = ["*.json"]
"nl_processing.extract_words_from_text.prompts" = ["*.json"]
"nl_processing.translate_text.prompts" = ["*.json"]
"nl_processing.translate_word.prompts" = ["*.json"]

[dependency-groups]
dev = [
  "pytest>=9.0.2,<10",
  "pytest-asyncio>=1.3.0,<2",
  "pytest-xdist>=3.8.0,<4",
  "ruff>=0.15.0,<0.16",
  "pylint>=4.0.4,<5",
  "vulture>=2.14.0,<3",
]
