[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nl_processing"
version = "1.0.3"
description = "Aggregate build for the nl_processing multi-package repository"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.0,<3",
  "langchain-core>=0.3,<1",
  "langchain-openai>=0.3,<1",
  "numpy>=2.0,<3",
  "opencv-python>=4.10,<5",
  "asyncpg>=0.30,<1",
  "aiosqlite>=0.20,<1",
]

[tool.setuptools]
packages = [
  "nl_processing.core",
  "nl_processing.database",
  "nl_processing.database.backend",
  "nl_processing.database_cache",
  "nl_processing.extract_text_from_image",
  "nl_processing.extract_text_from_image.prompts",
  "nl_processing.extract_words_from_text",
  "nl_processing.extract_words_from_text.prompts",
  "nl_processing.sampling",
  "nl_processing.translate_text",
  "nl_processing.translate_text.prompts",
  "nl_processing.translate_text_from_image",
  "nl_processing.translate_text_from_image.prompts",
  "nl_processing.translate_text_from_image.prompts.examples",
  "nl_processing.translate_word",
  "nl_processing.translate_word.prompts",
]

[tool.setuptools.package-dir]
"nl_processing.core" = "packages/core/src/nl_processing/core"
"nl_processing.database" = "packages/database/src/nl_processing/database"
"nl_processing.database.backend" = "packages/database/src/nl_processing/database/backend"
"nl_processing.database_cache" = "packages/database_cache/src/nl_processing/database_cache"
"nl_processing.extract_text_from_image" = "packages/extract_text_from_image/src/nl_processing/extract_text_from_image"
"nl_processing.extract_text_from_image.prompts" = "packages/extract_text_from_image/src/nl_processing/extract_text_from_image/prompts"
"nl_processing.extract_words_from_text" = "packages/extract_words_from_text/src/nl_processing/extract_words_from_text"
"nl_processing.extract_words_from_text.prompts" = "packages/extract_words_from_text/src/nl_processing/extract_words_from_text/prompts"
"nl_processing.sampling" = "packages/sampling/src/nl_processing/sampling"
"nl_processing.translate_text" = "packages/translate_text/src/nl_processing/translate_text"
"nl_processing.translate_text.prompts" = "packages/translate_text/src/nl_processing/translate_text/prompts"
"nl_processing.translate_text_from_image" = "packages/translate_text_from_image/src/nl_processing/translate_text_from_image"
"nl_processing.translate_text_from_image.prompts" = "packages/translate_text_from_image/src/nl_processing/translate_text_from_image/prompts"
"nl_processing.translate_text_from_image.prompts.examples" = "packages/translate_text_from_image/src/nl_processing/translate_text_from_image/prompts/examples"
"nl_processing.translate_word" = "packages/translate_word/src/nl_processing/translate_word"
"nl_processing.translate_word.prompts" = "packages/translate_word/src/nl_processing/translate_word/prompts"

[tool.setuptools.package-data]
"nl_processing.extract_text_from_image.prompts" = ["*.json"]
"nl_processing.extract_words_from_text.prompts" = ["*.json"]
"nl_processing.translate_text.prompts" = ["*.json"]
"nl_processing.translate_text_from_image.prompts" = ["*.json", "examples/*.jpg", "examples/*.png"]
"nl_processing.translate_text_from_image.prompts.examples" = ["*.jpg", "*.png"]
"nl_processing.translate_word.prompts" = ["*.json"]

[dependency-groups]
dev = [
  "pytest>=9.0.2,<10",
  "pytest-asyncio>=1.3.0,<2",
  "pytest-xdist>=3.8.0,<4",
  "ruff>=0.15.0,<0.16",
  "pylint>=4.0.4,<5",
  "vulture>=2.14.0,<3",
]
